samples/_failures_safe/1761515041_6f13d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02e442c5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_02e442c5.c:176:13: error: expected expression at end of input
  176 |             if (count < max_tokens)
      |             ^~
./samples/SAFE/__tmp_02e442c5.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02e442c5.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02e442c5.c:176:13: error: expected declaration or statement at end of input
